--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -19,4 +19,4 @@ jobs:
         pip install pylint
     - name: Analysing the code with pylint
       run: |
-        pylint `ls -R|grep .py$|xargs`
+        find . -path ./env -prune -false -o -type f -name '*.py' -exec pylint {} +
