--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-aiogram==2.13
-bs4==0.0.1
-emoji==1.2.0
+aiogram==2.14.3
+beautifulsoup4==4.9.3
+emoji==1.4.1
 flake8==3.9.2
-python-dotenv==0.18.0
-requests==2.25.1
-tenacity==7.0.0
+python-dotenv==0.19.0
+tenacity==8.0.1
