--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -20,4 +20,4 @@ jobs:
         pip install -r requirements.txt
     - name: Analysing the code with pylint
       run: |
-        find . -path ./env -prune -false -o -type f -name '*.py' -exec pylint {} +
+        pylint autosg
