--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,20 @@
-env/
-*.ini
+# Byte-compiled / optimized / DLL files
 __pycache__/
-.vscode/
+
+# pyenv
+.python-version
+
+# Environments
 .env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# IDE
+.vscode/
+
+# Artifacts
 users.json
-.coverage
-.pytest_cache/
