--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,9 @@ name = "auto-steam-gifts"
 version = "0.1.0"
 requires-python = ">=3.13"
 dependencies = [
-    "aiogram==3.20.0.post0",
+    "aiogram==3.22.0",
     "beautifulsoup4==4.13.4",
     "emoji==2.14.1",
-    "flake8==7.3.0",
     "python-dotenv==1.1.1",
     "steamspypi==1.1.1",
     "tenacity==9.1.2",
