--- a/.pylintrc
+++ b/.pylintrc
@@ -1,7 +1,7 @@
 [MASTER]
 init-hook='import sys; sys.path.append("env/lib/python3.13/site-packages")'
 min-public-methods=1
-max-line-length=120
+max-line-length=125
 
 [MESSAGES CONTROL]
-disable=W0222, W1203, C0411, C0412
+disable=W0222, W0718, W1203, C0411, C0412,
